fix horizontal overflow

--- a/src/routes/(layout)/sharedStyle.css
+++ b/src/routes/(layout)/sharedStyle.css
@@ -32,7 +32,7 @@ html {
     grid-template-rows: min-content auto;
     grid-auto-flow: row;
     background-color: #F6FAFF;
-
+    width: 100%;
     height: 100%;
 }
 
@@ -56,13 +56,13 @@ html {
 
 /* table */
 
-table{
+table {
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-style: normal;
 }
 
-th{
+th {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -73,7 +73,7 @@ th{
     color: #2F2F30;
 }
 
-td{
+td {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -88,12 +88,14 @@ td{
 }
 
 #content {
-    padding-left: 32px; 
+    /* padding-left: 32px; 
     padding-top: 20px; 
-    padding-right: 16px;
+    padding-right: 16px; */
+    padding: 16px;
 }
 
-h2, h3{
+h2,
+h3 {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -101,7 +103,7 @@ h2, h3{
     color: #00236F;
 }
 
-.card{
+.card {
 
     background-color: white;
     padding: 16px;
